{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 55,
  "lineage": "0adfc8a3-56a2-43ee-6957-7c6dd3d9aba6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "walter-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:internet-gateway/igw-0466d7b7d2fb274e5",
            "id": "igw-0466d7b7d2fb274e5",
            "owner_id": "862686223907",
            "tags": {
              "Name": "walter-ig"
            },
            "tags_all": {
              "Name": "walter-ig"
            },
            "vpc_id": "vpc-09350ad1346121838"
          },
          "dependencies": [
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "walter-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:route-table/rtb-0bb7746af6c24ca0b",
            "id": "rtb-0bb7746af6c24ca0b",
            "owner_id": "862686223907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0466d7b7d2fb274e5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09350ad1346121838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.walter-ig",
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "walter-application-deployment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:vpc/vpc-09350ad1346121838",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0596d8a6f4d82f498",
            "default_route_table_id": "rtb-0ca2f214161bf1776",
            "default_security_group_id": "sg-05cc3da76bab0b132",
            "dhcp_options_id": "dopt-01dfbf2c7f0ecee82",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09350ad1346121838",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca2f214161bf1776",
            "owner_id": "862686223907",
            "tags": {
              "Name": "walter-application-deployment-vpc"
            },
            "tags_all": {
              "Name": "walter-application-deployment-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046173580183b4d6f",
            "arn": "arn:aws:ec2:us-west-1:862686223907:instance/i-0c5fdb259e6416798",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5fdb259e6416798",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "walterwojnarowski-awskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f0b83cd61e6bfbd",
            "private_dns": "ip-10-4-0-202.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.0.202",
            "public_ip": "3.101.111.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e7ad4ea89690d4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e00d9523848e1c9f",
            "tags": {
              "Name": "walter-app"
            },
            "tags_all": {
              "Name": "walter-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03904058be15697f0"
            ]
          },
          "dependencies": [
            "aws_vpc.walter-application-deployment",
            "module.application-tier.aws_security_group.walter-sg-group",
            "module.application-tier.aws_subnet.walter-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "walter-app-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020412947784fb820",
            "route_table_id": "rtb-0bb7746af6c24ca0b",
            "subnet_id": "subnet-0e00d9523848e1c9f"
          },
          "dependencies": [
            "aws_internet_gateway.walter-ig",
            "aws_route_table.walter-rt",
            "aws_vpc.walter-application-deployment",
            "module.application-tier.aws_subnet.walter-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "walter-sg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:security-group/sg-03904058be15697f0",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03904058be15697f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "3.129.217.226/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "walter-app-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "walter-app-sg"
            },
            "tags_all": {
              "Name": "walter-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09350ad1346121838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1355196459",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03904058be15697f0",
            "security_group_rule_id": "sgr-0e1df256297f36940",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment",
            "module.application-tier.aws_security_group.walter-sg-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "3.129.217.226/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2373519154",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03904058be15697f0",
            "security_group_rule_id": "sgr-0cd0aca6d18f093bb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment",
            "module.application-tier.aws_security_group.walter-sg-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "92.8.160.94/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2391394871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03904058be15697f0",
            "security_group_rule_id": "sgr-09d8b8712fe00044f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application-tier.aws_security_group.walter-sg-group"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "walter-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:subnet/subnet-0e00d9523848e1c9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.4.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e00d9523848e1c9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "walter-app"
            },
            "tags_all": {
              "Name": "walter-app"
            },
            "vpc_id": "vpc-09350ad1346121838"
          },
          "dependencies": [
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    }
  ]
}